# TopoA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: cli.cpp  compressor.hpp  compressorData.hpp  compressorIterativeCT.hpp  compressorIterativeMT.hpp  criticalpointstorage.hpp  criticalpointtree.hpp  cubicsplinecoefficients.hpp  cubicsplineinterpolation.hpp  decompressor.hpp  evaluation.hpp  evtk.cpp  evtk.hpp  getCTFull.hpp  getCTFullWithSegmentation.hpp  huffman.cpp  huffman.hpp  mergeTreeHelper.hpp  multitracker.cpp  multitracker.hpp  python_error.hpp  region.hpp  results.hpp  scalarfield.hpp  scalarfieldheap.hpp  treeHeightCli.cpp  treeInfoClasses.hpp  unionfind.cpp  unionfind.hpp  unorderedunionfind.cpp  unorderedunionfind.hpp  unrolledloops.hpp  write_utils.hpp
